--- a/jdbc/pom.xml
+++ b/jdbc/pom.xml
@@ -85,7 +85,12 @@
 			<version>42.2.18</version>
 			<scope>runtime</scope>
 		</dependency>
-	    
+		
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+			<version>5.2.3</version>
+		</dependency>
 		
 		<dependency>
 		  	<groupId>junit</groupId>
