--- a/jdbc/src/main/resources/application.properties
+++ b/jdbc/src/main/resources/application.properties
@@ -2,10 +2,9 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=1111
 
-#spring.datasource.initialize=true
-#spring.datasource.initialization-mode=always
-
 spring.jackson.serialization.fail-on-empty-beans=false
+
+spring.flyway.baseline-on-migrate = true
 
 jwtSecret= SpringKey
 jwtExpirationMs= 86400000
